welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: not found: value T
                    return T
                           ^Array2:28: warning: enclosing method run has result type Unit: return value discarded
                    return T
                    ^